[FIX] web: adapt scroll on setting app selector
Prior to this commit, the setting page had 2 vertical scrollbars, which
wasn't clear to use on mobile.

This commit changes the scrolling orientation of the app selector on
mobile to make it easier to use in small screen.

task-3349528

closes odoo/odoo#132676

--- a/addons/web/static/src/webclient/settings_form_view/settings_form_view_mobile.scss
+++ b/addons/web/static/src/webclient/settings_form_view/settings_form_view_mobile.scss
@@ -1,6 +1,6 @@
 @include media-breakpoint-down(md) {
 
-    .o_base_settings_view {
+    .o_base_settings_view .o_form_renderer {
         flex-flow: column nowrap;
 
         > .o_control_panel {
